# ClipboardApplication

./: .env  FIREBASE-SETUP.md  README.md  firebase-rules.json  package-lock.json  package.json  pnpm-lock.yaml  snipstack.txt  vite.config.ts
.cursor/rules/: errrule.mdc
src/: App.css  App.tsx
src-tauri/: Cargo.toml  macos_icon_tool  tauri.conf.json
src-tauri/python/: README.md
src-tauri/python/bundled_python/: pyvenv.cfg
src-tauri/src/: lib.rs  main.rs
src/components/: DraggableMainScreen.tsx  FolderManager.tsx  GuestPage.tsx  HomePage.tsx  LoginForm.tsx  MainScreen.tsx  MainScreen.tsx.backup  MainScreen.tsx.bak  MainScreen.tsx.bak2  MainScreen.tsx.old  MainScreen.tsx.original  Sidebar.tsx  SignupForm.tsx  SplashScreen.tsx
src/hooks/: useClipboardDebug.ts
src/services/: firebase.ts
src/styles/: AuthForms.css  DraggableMainScreen.css  GuestPage.css  HomePage.css  MainScreen.css  Sidebar.css  SplashScreen.css
